networking/02-gateway-api-tls/gateway.yaml
# gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    hostname: "claybrainer.lab"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: claybrainer-tls
    # --- CHANGED TO ALLOW ALL NAMESPACES ---
    allowedRoutes:
      namespaces:
        from: All
