networking/02-gateway-api-tls/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-a-route
  namespace: site-a
spec:
  parentRefs:
  - name: tls-gateway
    namespace: default
  hostnames:
  - "claybrainer.lab"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /weba
    backendRefs:
    - name: web-a
      port: 5678
